--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-/* General Styles */
+<style>
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -101,7 +101,7 @@ footer {
         font-size: 1.5em;
     }
 }
-
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
