--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
         header {
@@ -21,11 +22,22 @@
             color: white;
             padding: 10px 0;
             text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000; /* Ensure header is on top of other content */
+        }
+
+        .logo {
+            max-width: 150px; /* Adjust based on your logo size */
+            height: auto;
         }
 
         nav {
             background-color: #0059b3;
             padding: 10px;
+            position: sticky;
+            top: 60px; /* Adjust this based on the header height */
+            z-index: 999; /* Ensure navigation is below the header */
         }
 
         nav ul {
@@ -59,9 +71,9 @@
             color: white;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            width: 100%;
+            position: sticky;
             bottom: 0;
+            width: 100%;
         }
 
         /* Section Styles */
@@ -193,6 +205,7 @@
 <body>
     <!-- Header Section -->
     <header>
+        <img src="img/lrs.png" alt="LRS Philippines Logo" class="logo">
         <h1>Welcome to LRS Philippines Official</h1>
     </header>
 
@@ -213,7 +226,7 @@
         <div class="container">
             <h2>Welcome to LRS Philippines Official</h2>
             <p>Your trusted source for lotto games and fun betting experiences. We offer a wide range of exciting lottery games like 6/45, 6/49, 6/55, 6/58, 2D Lotto, and 3D Lotto. Join us for a chance to win big and experience the thrill of the lottery!</p>
-            <iframe src="https://www.youtube.com/watch?v=y5VfH2LTGX8" title="YouTube video player"></iframe>
+            <iframe src="https://www.youtube.com/embed/your_video_id" title="YouTube video player"></iframe>
         </div>
     </section>
 
@@ -268,9 +281,11 @@
         <div class="container">
             <h2>Our Winners</h2>
             <div class="gallery">
-                <img src="path_to_winner1.jpg" alt="Winner 1">
-                <img src="path_to_winner2.jpg" alt="Winner 2">
-                <img src="path_to_winner3.jpg" alt="Winner 3">
+                <img src="img/sep1.png" alt="SEPTEMBER 1">
+                <img src="img/sep2.png" alt="SEPTEMBER 2">
+                <img src="img/sep3.png" alt="SEPTEMBER 3">
+                <img src="img/sep4.png" alt="SEPTEMBER 4">
+                <img src="img/sep5.png" alt="SEPTEMBER 5">
                 <!-- Add more images as needed -->
             </div>
         </div>
@@ -294,12 +309,4 @@
         // Toggle game details
         const gameTitles = document.querySelectorAll('.game-title');
 
-        gameTitles.forEach(title => {
-            title.addEventListener('click', function() {
-                const details = this.nextElementSibling;
-                details.classList.toggle('hidden');
-            });
-        });
-    </script>
-</body>
-</html>
+        game
