--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="img/lrs.png" alt="LRS Philippines Logo" class="logo">
+        <img src="lotto/img/lrs.png" alt="LRS Philippines Logo" class="logo">
         <h1>Welcome to LRS Philippines Official</h1>
     </header>
 
