--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="img/lrs.png" alt="LRS Philippines Logo" class="logo">
+        <img src="lotto/img/lrs.png" alt="LRS Philippines Logo" class="logo">
         <h1>Welcome to LRS Philippines Official</h1>
     </header>
 
@@ -255,22 +255,182 @@
                 <thead>
                     <tr>
                         <th>Date</th>
-                        <th>Game</th>
+                        <th>PICK 3</th>
                         <th>Winning Numbers</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>2024-09-01</td>
+                        <td>SEPTEMBER 1, 2024</td>
                         <td>6/45 Mega Lotto</td>
-                        <td>01, 12, 23, 34, 45, 08</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
                     </tr>
                     <tr>
-                        <td>2024-09-02</td>
+                        <td>SEPTEMBER 2, 2024</td>
                         <td>6/49 Super Lotto</td>
-                        <td>05, 11, 19, 23, 34, 44</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
                     </tr>
-                    <!-- Add more rows as needed -->
+                    <tr>
+                        <td>SEPTEMBER 3, 2024</td>
+                        <td>6/45 Mega Lotto</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 4, 2024</td>
+                        <td>6/49 Super Lotto</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 5, 2024</td>
+                        <td>6/58 Ultra Lotto</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 6, 2024</td>
+                        <td>6/55 Grand Lotto</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 7, 2024</td>
+                        <td>6/49 Super Lotto</td>
+                        <td>01 - 02 - 03 - 04 - 05 -06</td>
+                    </tr>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                       	<th>TIME</th>
+                        <th>2D WINNING NUMBERS</th>
+                        <th>3D LOTTO WINNING NUMBERS</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>SEPTEMBER 1, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 1, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 1, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 2, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 2, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 2, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 3, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 3, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 3, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 4, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 4, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 4, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 5, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 5, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 5, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 6, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 6, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 6, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 7, 2024</td>
+                        <td>2PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 7, 2024</td>
+                        <td>5PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
+                    <tr>
+                        <td>SEPTEMBER 7, 2024</td>
+                        <td>9PM</td>
+                        <td>01 - 02</td>
+                        <td>8 - 8 - 8</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
