--- a/index.html
+++ b/index.html
@@ -239,10 +239,54 @@
         </div>
     </section>
 
-    <!-- Games Section -->
+                <!-- Games Section -->
     <section id="games">
         <div class="container">
             <h2>Our Games</h2>
+            <article>
+                <img src="path_to_6_45_image.jpg" alt="6/45 Mega Lotto" class="game-image">
+                <h3 class="game-title">6/45 Mega Lotto</h3>
+                <div class="game-details hidden">
+                    <p>Ready for a mega win? Choose 3 numbers from 1 to 45 and wait for the draw! If all three of your numbers match the six drawn numbers, you win instantly. Even if only two numbers match, you get a return bet. Exciting, right? Join now and try your luck!</p>
+                </div>
+            </article>
+            <article>
+                <img src="path_to_6_49_image.jpg" alt="6/49 Super Lotto" class="game-image">
+                <h3 class="game-title">6/49 Super Lotto</h3>
+                <div class="game-details hidden">
+                    <p>Dreaming of a super win? Pick 3 numbers from 1 to 49. Match all three with the six drawn numbers, and you're a winner! Just two matching numbers still earn you a return bet. It's your chance to hit it big—play now and see if you’re lucky!</p>
+                </div>
+            </article>
+            <article>
+                <img src="path_to_6_55_image.jpg" alt="6/55 Grand Lotto" class="game-image">
+                <h3 class="game-title">6/55 Grand Lotto</h3>
+                <div class="game-details hidden">
+                    <p>Experience the grand thrill! Select 3 numbers from 1 to 55. If all three numbers appear among the six drawn numbers, you win the grand prize! Even with just two matches, a return bet is yours. Get in the game and aim for the grand prize!</p>
+                </div>
+            </article>
+            <article>
+                <img src="path_to_6_58_image.jpg" alt="6/58 Ultra Lotto" class="game-image">
+                <h3 class="game-title">6/58 Ultra Lotto</h3>
+                <div class="game-details hidden">
+                    <p>Go ultra with your picks! Choose 3 numbers from 1 to 58. Match all three numbers with the drawn six and win the jackpot instantly. Two matches? You still get a return bet. Don’t miss out on your chance for an ultra win!</p>
+                </div>
+            </article>
+            <article>
+                <img src="path_to_2d_lotto_image.jpg" alt="2D Lotto" class="game-image">
+                <h3 class="game-title">2D Lotto</h3>
+                <div class="game-details hidden">
+                    <p>Pick 2 numbers from 1 to 31 and choose your play type. Use 'S' for straight (exact order), 'R' for rumble (any order), or 'P' for pompi (same number). Match the drawn numbers and win—simple and fun!</p>
+                </div>
+            </article>
+            <article>
+                <img src="path_to_3d_lotto_image.jpg" alt="3D Lotto" class="game-image">
+                <h3 class="game-title">3D Lotto</h3>
+                <div class="game-details hidden">
+                    <p>Select 3 numbers from 0 to 9 and specify your play type. Use 'S' for straight (exact order), 'R' for rumble (any order), or 'T' for trio (same numbers). Match all three numbers to win. It’s easy to play and exciting to win!</p>
+                </div>
+            </article>
+        </div>
+    </section>
             <!-- Your existing game articles go here -->
         </div>
     </section>
